
2007-12-19 tdb
 * Session::render_link shouldn't URI escape (should be HTML escaping, which
    the DOM library will do for us), fixing #3197
 * Added methods to parse XML direct from a URL
 * Added 'pid' configuration to Import::DOI, removed use of wget, fixing #3193
    and #2854, and part of #2820

2007-12-20 tdb
 * Removed temporary file usage from PubMedID import script, fixing #2820

2008-01-09 tdb
 * Changed name of ordervalue_single to ordervalue_basic, fixing #3201
 * Added $session and $langid to call to ordervalue_basic, really fixing #3201

2008-01-11 tdb
 * import_subjects should use the import ids, fixing #3209

2008-01-14 tdb
 * fixed typo in [3070], fixing #3210

2008-01-14 tdb
 * Use Text::Unidecode to create sort values, fixing #3200
 * EPrints::Metafield::render_value_withopts now checks definedness by using
    EPrints::Utils::is_set, fixing #2923
 * Added check for whether the subjects field is configured in MODS (METS)
    export

2008-01-15 tdb
 * Check whether an executable is set as "NOTFOUND", fixing #2874
 * Added a space between 'von' and 'family' parts in BibTeX import
 * Merged r2676 from trunk, which fixes unicode problems in title_duplicates,
    fixing #2815
 * Replaced $session->html_phrase with $self->html_phrase in Screen::Import,
    fixing #3203
 * Now checks for visibility all in Screen::Import, fixing #3207

2008-01-16 tdb
 * Overhauled Import plugins to use a Handler mechanism to output errors,
    warnings and object parse/creation events (should be transparent to the
	actual plugins), fixing #3206, #2812, #3205

2008-01-17 tdb
 * Fixed a problem with parsing BibTeX names that contained braces
 * Change OAI record headers to use yyyy-mm-dd, fixing #3227
 * Keep the data from a Test import, fixing #3134
 * Don't exit on bad XML when using render_xhtml_field, fixing #3147
 * Added Microsoft Excel document format, fixing #3217
 * Using a pin with content twice will no longer repeat content, fixing #3027
